fix some dtos for response
